# discord-ext-custom_interaction

./: pyproject.toml  readme.rst
discord/ext/custom_interaction/: __init__.py  _wait_for_overloads.py  tree.py
discord/ext/custom_interactions/: __init__.py  _types.py  core.py  interactions.py
examples/: basic.py  builtin_custom.py  builtin_custom_guild.py  client.py
examples/cog/: bot.py  extension.py
